Spacing fixes

--- a/css/dark-style.css
+++ b/css/dark-style.css
@@ -44,6 +44,7 @@ body::-webkit-scrollbar {
     max-width: 980px;
 	margin-right: auto;
 	margin-left: auto;
+    margin-bottom: 20px;
 	padding-right: 10px;
 	padding-left: 10px;
 	min-height: 100%;
@@ -57,6 +58,7 @@ body::-webkit-scrollbar {
 .head-text {
     margin-right: auto;
     color:#79b0e4;
+    cursor: default;
     font-size: 2.3rem;
     font-family: 'Roboto', sans-serif;
     text-shadow: 2px 2px 6px #494949bd;
@@ -75,6 +77,16 @@ body::-webkit-scrollbar {
     }
     .header {
         margin-bottom: 10px;
+    }
+    .text-preview {
+        padding: 1em 2em;
+        border-radius: 10px;
+    }
+    .text-preview button{
+        font-size: 0.8rem;
+    }
+    .text-body{
+        font-size: 1.2em;
     }
 }
 
@@ -172,14 +184,17 @@ body::-webkit-scrollbar {
     cursor: pointer;
     font-size: 1.25em;
     font-weight: bold;
-    transition: all 0.3s ease;
+    transition: 0.3s ease;
     padding: 10px 15px;
 }
 .imp:hover{
-    background-color: #37a058;
+    background-color: #5d7063;
 }
 .imp.active{
-    background-color: #2b75b1;
+    background-color: #42a2da;
+}
+.imp.active1{
+    background-color: #e99547;
 }
 .save-btn, .cancel-btn{
     float: right;
@@ -210,10 +225,8 @@ body::-webkit-scrollbar {
 .notes-list-item {
     background: #747a79;
 	border-radius: 10px;
-	padding: 0.4em 1em 1em 1em;
+	padding: 0.4em 0.4em 1em 1em;
 	height: 170px;
-    overflow: auto;
-    overflow-wrap: break-word;
     color: rgb(230, 230, 230);
 	display: flex;
     box-shadow: 2px 2px 10px #1414143f;
@@ -221,13 +234,34 @@ body::-webkit-scrollbar {
 	justify-content: space-between;
 	white-space: pre-wrap;
 }
-
+.inside-text-body::-webkit-scrollbar-thumb {
+    background-image: linear-gradient(0deg, #baa3e4, #89a6db);
+    border-radius: 10px;
+    outline: none;
+}
+.inside-text-body::-webkit-scrollbar {
+    width: 4px;
+    border-radius: 4px;
+    background-color: #6d6d6d;
+}
+.inside-text-body::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(241, 241, 241, 0.3);
+    background-color: #757575;
+}
+.inside-text-body{
+    flex-grow: 1;
+    display: flex;
+    margin-top: 6px;
+    overflow: auto;
+    overflow-wrap: break-word;
+}
 #exit {
     margin-left: 10px;
 }
 .topBar {
     display: flex;
     justify-content: space-between;
+    margin-right: 0.3em;
 }
 .mark {
     height: 6px;
@@ -254,13 +288,14 @@ body::-webkit-scrollbar {
     padding: 20px 1px 10px 1px;
 }
 .theme-toggle{
-    color: #8fcf9c;
+    color: #a6d4af;
     cursor: pointer;
     border: none;
     margin: auto 12px auto auto;
     align-items: center;
     justify-content: center;
+    transition: 0.5s ease;
 }
 .theme-toggle:hover{
-    color:#64ceb7;
+    color:#39b197;
 }
